@@ -1,43 +1,73 @@
 package de.innologic.i18nservice.language.service;
 
+import de.innologic.i18nservice.audit.service.AuditLogService;
+import de.innologic.i18nservice.bundle.cache.BundleCache;
+import de.innologic.i18nservice.bundle.model.LanguageBundleVersionEntity;
+import de.innologic.i18nservice.bundle.repo.LanguageBundleRepository;
+import de.innologic.i18nservice.bundle.repo.LanguageBundleVersionRepository;
 import de.innologic.i18nservice.common.exception.ConflictException;
 import de.innologic.i18nservice.common.exception.NotFoundException;
+import de.innologic.i18nservice.common.util.LanguageCodeNormalizer;
+import de.innologic.i18nservice.common.util.ProjectKeyValidator;
 import de.innologic.i18nservice.language.dto.CreateLanguageRequest;
 import de.innologic.i18nservice.language.dto.LanguageResponse;
 import de.innologic.i18nservice.language.dto.UpdateLanguageRequest;
 import de.innologic.i18nservice.language.model.LanguageEntity;
 import de.innologic.i18nservice.language.repo.LanguageRepository;
-import de.innologic.i18nservice.projectscope.model.ProjectScopeEntity;
-import de.innologic.i18nservice.projectscope.repo.ProjectScopeRepository;
-import de.innologic.i18nservice.projectscope.service.ProjectKeyValidator;
-import lombok.RequiredArgsConstructor;
+import de.innologic.i18nservice.project.model.ProjectScopeEntity;
+import de.innologic.i18nservice.project.repo.ProjectScopeRepository;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import java.nio.file.Files;
+import java.nio.file.Paths;
 import java.time.Instant;
 import java.util.List;
+import java.util.Map;
 
 @Service
-@RequiredArgsConstructor
 public class LanguageService {
 
-    private final ProjectScopeRepository projectScopeRepository;
+    private final ProjectScopeRepository scopeRepo;
     private final LanguageRepository languageRepository;
+    private final AuditLogService audit;
+    private final LanguageBundleRepository bundleRepo;
+    private final LanguageBundleVersionRepository bundleVersionRepo;
+    private final BundleCache bundleCache;
 
-    /**
-     * P0-2 Create
-     * Step 6B: Wenn noch kein Default gesetzt ist, wird die erste Sprache Default.
-     */
+    public LanguageService(ProjectScopeRepository scopeRepo,
+                           LanguageRepository languageRepository,
+                           AuditLogService audit,
+                           LanguageBundleRepository bundleRepo,
+                           LanguageBundleVersionRepository bundleVersionRepo,
+                           BundleCache bundleCache) {
+        this.scopeRepo = scopeRepo;
+        this.languageRepository = languageRepository;
+        this.audit = audit;
+        this.bundleRepo = bundleRepo;
+        this.bundleVersionRepo = bundleVersionRepo;
+        this.bundleCache = bundleCache;
+    }
+
+    // -------------------------------------------------
+    // Create / Read
+    // -------------------------------------------------
+
     @Transactional
     public LanguageResponse create(String projectKey, CreateLanguageRequest req, String actor) {
-        ProjectKeyValidator.validate(projectKey);
-
-        ProjectScopeEntity scope = getScope(projectKey);
+        ProjectScopeEntity scope = loadScope(projectKey);
 
         String code = normalizeLanguageCode(req.languageCode());
 
+        // aktives (nicht deleted) Duplikat verhindern
         if (languageRepository.existsByProjectKeyAndLanguageCodeAndDeletedFalse(projectKey, code)) {
             throw new ConflictException("Language already exists: " + code);
+        }
+
+        // Edge-Case Fix (UNIQUE(project, code, is_deleted)):
+        // Wenn deleted-Version existiert -> nicht neu anlegen, sonst später SoftDelete-Konflikt.
+        if (languageRepository.existsByProjectKeyAndLanguageCodeAndDeletedTrue(projectKey, code)) {
+            throw new ConflictException("Language exists in trash. Restore or purge first: " + code);
         }
 
         LanguageEntity e = new LanguageEntity();
@@ -45,66 +75,102 @@ public class LanguageService {
         e.setLanguageCode(code);
         e.setName(req.name());
         e.setActive(true);
+
         e.setDeleted(false);
+        e.setDeletedAt(null);
+        e.setDeletedBy(null);
+
         e.setCreatedBy(actor);
         e.setModifiedBy(actor);
 
         LanguageEntity saved = languageRepository.save(e);
 
-        // Step 6B: Default automatisch setzen, wenn noch nicht vorhanden
-        if (isBlank(scope.getDefaultLanguageCode())) {
-            scope.setDefaultLanguageCode(saved.getLanguageCode());
-            projectScopeRepository.save(scope);
+        auditSafe(projectKey, actor,
+                "LANGUAGE_CREATE",
+                "LANGUAGE",
+                code,
+                Map.of("name", saved.getName(), "active", saved.isActive()),
+                null);
+
+        // Optional, aber praktisch: wenn kein Default gesetzt ist, setze ihn auf die erste Sprache
+        if (scope.getDefaultLanguageCode() == null || scope.getDefaultLanguageCode().isBlank()) {
+            scope.setDefaultLanguageCode(code);
+            scopeRepo.save(scope);
+
+            auditSafe(projectKey, actor,
+                    "PROJECT_SETTINGS_AUTO_DEFAULT",
+                    "PROJECT_SETTINGS",
+                    projectKey,
+                    Map.of("default", code),
+                    null);
         }
 
-        return toResponse(saved);
+        return LanguageResponse.from(saved);
     }
 
     @Transactional(readOnly = true)
-    public List<LanguageResponse> list(String projectKey) {
-        ProjectKeyValidator.validate(projectKey);
-        getScope(projectKey); // ensures project exists
+    public List<LanguageResponse> listActive(String projectKey) {
+        loadScope(projectKey);
 
-        return languageRepository.findByProjectKeyAndDeletedFalseOrderByLanguageCodeAsc(projectKey)
+        return languageRepository
+                .findByProjectKeyAndDeletedFalseAndActiveTrueOrderByLanguageCodeAsc(projectKey)
                 .stream()
-                .map(this::toResponse)
+                .map(LanguageResponse::from)
                 .toList();
     }
 
     @Transactional(readOnly = true)
-    public LanguageResponse get(String projectKey, String languageCode) {
-        ProjectKeyValidator.validate(projectKey);
-        getScope(projectKey); // ensures project exists
+    public List<LanguageResponse> listAll(String projectKey) {
+        loadScope(projectKey);
 
-        String code = normalizeLanguageCode(languageCode);
-
-        LanguageEntity e = languageRepository.findByProjectKeyAndLanguageCodeAndDeletedFalse(projectKey, code)
-                .orElseThrow(() -> new NotFoundException("Language not found: " + code));
-
-        return toResponse(e);
+        return languageRepository.findByProjectKeyOrderByLanguageCodeAsc(projectKey)
+                .stream()
+                .map(LanguageResponse::from)
+                .toList();
     }
 
-    /**
-     * P0-2 Update
-     * P0-4 Guardrails: Default/Fallback dürfen nicht deaktiviert werden.
-     */
-    @Transactional
-    public LanguageResponse update(String projectKey, String languageCode, UpdateLanguageRequest req, String actor) {
-        ProjectKeyValidator.validate(projectKey);
+    @Transactional(readOnly = true)
+    public List<LanguageResponse> listDeleted(String projectKey) {
+        loadScope(projectKey);
 
-        ProjectScopeEntity scope = getScope(projectKey);
+        return languageRepository.findByProjectKeyAndDeletedTrueOrderByLanguageCodeAsc(projectKey)
+                .stream()
+                .map(LanguageResponse::from)
+                .toList();
+    }
 
-        String code = normalizeLanguageCode(languageCode);
+    @Transactional(readOnly = true)
+    public LanguageResponse get(String projectKey, String languageCodeRaw) {
+        loadScope(projectKey);
 
-        LanguageEntity e = languageRepository.findByProjectKeyAndLanguageCodeAndDeletedFalse(projectKey, code)
+        String code = normalizeLanguageCode(languageCodeRaw);
+
+        LanguageEntity e = languageRepository
+                .findByProjectKeyAndLanguageCodeAndDeletedFalse(projectKey, code)
                 .orElseThrow(() -> new NotFoundException("Language not found: " + code));
 
-        // expliziter Version-Check für klare Fehlermeldung
+        return LanguageResponse.from(e);
+    }
+
+    // -------------------------------------------------
+    // Update / Delete / Restore / Purge
+    // -------------------------------------------------
+
+    @Transactional
+    public LanguageResponse update(String projectKey, String languageCodeRaw, UpdateLanguageRequest req, String actor) {
+        ProjectScopeEntity scope = loadScope(projectKey);
+
+        String code = normalizeLanguageCode(languageCodeRaw);
+
+        LanguageEntity e = languageRepository
+                .findByProjectKeyAndLanguageCodeAndDeletedFalse(projectKey, code)
+                .orElseThrow(() -> new NotFoundException("Language not found: " + code));
+
         if (e.getVersion() != req.expectedVersion()) {
             throw new ConflictException("Version conflict. Current=" + e.getVersion() + ", expected=" + req.expectedVersion());
         }
 
-        // P0-4: Default/Fallback dürfen nicht deaktiviert werden
+        // Default/Fallback darf nicht deaktiviert werden
         if (!req.active()) {
             ensureNotDefaultOrFallback(scope, code, "deactivate");
         }
@@ -114,24 +180,33 @@ public class LanguageService {
         e.setModifiedBy(actor);
 
         LanguageEntity saved = languageRepository.save(e);
-        return toResponse(saved);
+
+        auditSafe(projectKey, actor,
+                "LANGUAGE_UPDATE",
+                "LANGUAGE",
+                code,
+                Map.of("name", saved.getName(), "active", saved.isActive(), "version", saved.getVersion()),
+                null);
+
+        return LanguageResponse.from(saved);
     }
 
-    /**
-     * P0-2 Soft Delete
-     * Step 6A: Default/Fallback darf nicht gelöscht werden.
-     */
     @Transactional
-    public void softDelete(String projectKey, String languageCode, String actor) {
-        ProjectKeyValidator.validate(projectKey);
+    public void softDelete(String projectKey, String languageCodeRaw, String actor) {
+        ProjectScopeEntity scope = loadScope(projectKey);
 
-        ProjectScopeEntity scope = getScope(projectKey);
-        String code = normalizeLanguageCode(languageCode);
+        String code = normalizeLanguageCode(languageCodeRaw);
+
+        LanguageEntity e = languageRepository
+                .findByProjectKeyAndLanguageCodeAndDeletedFalse(projectKey, code)
+                .orElseThrow(() -> new NotFoundException("Language not found: " + code));
 
         ensureNotDefaultOrFallback(scope, code, "delete");
 
-        LanguageEntity e = languageRepository.findByProjectKeyAndLanguageCodeAndDeletedFalse(projectKey, code)
-                .orElseThrow(() -> new NotFoundException("Language not found: " + code));
+        // Edge-Case Fix: wenn schon deleted-Version existiert -> kein SoftDelete möglich
+        if (languageRepository.existsByProjectKeyAndLanguageCodeAndDeletedTrue(projectKey, code)) {
+            throw new ConflictException("Cannot soft-delete. A deleted version already exists. Purge or restore first: " + code);
+        }
 
         e.setDeleted(true);
         e.setDeletedAt(Instant.now());
@@ -139,23 +214,28 @@ public class LanguageService {
         e.setModifiedBy(actor);
 
         languageRepository.save(e);
+
+        auditSafe(projectKey, actor,
+                "LANGUAGE_SOFT_DELETE",
+                "LANGUAGE",
+                code,
+                Map.of("deletedAt", e.getDeletedAt()),
+                null);
     }
 
-    /**
-     * P0-2 Restore
-     */
     @Transactional
-    public LanguageResponse restore(String projectKey, String languageCode, String actor) {
-        ProjectKeyValidator.validate(projectKey);
-        getScope(projectKey); // ensures project exists
+    public LanguageResponse restore(String projectKey, String languageCodeRaw, String actor) {
+        loadScope(projectKey);
 
-        String code = normalizeLanguageCode(languageCode);
+        String code = normalizeLanguageCode(languageCodeRaw);
 
+        // Restore nur wenn keine aktive Version existiert
         if (languageRepository.existsByProjectKeyAndLanguageCodeAndDeletedFalse(projectKey, code)) {
             throw new ConflictException("Cannot restore. Active language with same code exists: " + code);
         }
 
-        LanguageEntity e = languageRepository.findByProjectKeyAndLanguageCodeAndDeletedTrue(projectKey, code)
+        LanguageEntity e = languageRepository
+                .findByProjectKeyAndLanguageCodeAndDeletedTrue(projectKey, code)
                 .orElseThrow(() -> new NotFoundException("Deleted language not found: " + code));
 
         e.setDeleted(false);
@@ -164,73 +244,155 @@ public class LanguageService {
         e.setModifiedBy(actor);
 
         LanguageEntity saved = languageRepository.save(e);
-        return toResponse(saved);
+
+        auditSafe(projectKey, actor,
+                "LANGUAGE_RESTORE",
+                "LANGUAGE",
+                code,
+                null,
+                null);
+
+        return LanguageResponse.from(saved);
     }
 
-    // -------------------------
-    // Helpers
-    // -------------------------
+    @Transactional
+    public void purge(String projectKey, String languageCodeRaw, boolean force, String actor) {
+        ProjectScopeEntity scope = loadScope(projectKey);
+        String code = normalizeLanguageCode(languageCodeRaw);
 
-    private ProjectScopeEntity getScope(String projectKey) {
-        return projectScopeRepository.findByProjectKey(projectKey)
+        // Ziel ermitteln:
+        // - Standard: nur deleted=true purgebar
+        // - force: falls nicht deleted, dann deleted=false purgebar
+        LanguageEntity target = languageRepository
+                .findByProjectKeyAndLanguageCodeAndDeletedTrue(projectKey, code)
+                .orElseGet(() -> {
+                    if (!force) {
+                        throw new ConflictException("Language is not in trash. Soft-delete first: " + code);
+                    }
+                    return languageRepository
+                            .findByProjectKeyAndLanguageCodeAndDeletedFalse(projectKey, code)
+                            .orElseThrow(() -> new NotFoundException("Language not found: " + code));
+                });
+
+        // Guardrail: Default/Fallback darf nie purged werden
+        ensureNotDefaultOrFallback(scope, code, "purge");
+
+        // 1) Bundle + Datei löschen (falls vorhanden) -> wegen FK RESTRICT muss das vor Language-Delete passieren
+        boolean bundleRemoved = deleteBundleIfExists(projectKey, code, target.getId(), actor);
+
+        // 2) Cache invalidieren (sicher, unabhängig davon ob Bundle existierte)
+        bundleCache.invalidate(projectKey, code);
+
+        // 3) Language Row hard löschen
+        languageRepository.delete(target);
+
+        // 4) Audit
+        auditSafe(projectKey, actor,
+                "LANGUAGE_PURGE",
+                "LANGUAGE",
+                code,
+                Map.of(
+                        "force", force,
+                        "wasDeleted", target.isDeleted(),
+                        "bundleRemoved", bundleRemoved
+                ),
+                null);
+    }
+
+    // -------------------------------------------------
+    // Helpers
+    // -------------------------------------------------
+
+    private ProjectScopeEntity loadScope(String projectKey) {
+        ProjectKeyValidator.validate(projectKey);
+        return scopeRepo.findByProjectKey(projectKey)
                 .orElseThrow(() -> new NotFoundException("Project not found: " + projectKey));
     }
 
+    private String normalizeLanguageCode(String raw) {
+        String n = LanguageCodeNormalizer.normalize(raw);
+        if (n == null || !LanguageCodeNormalizer.isPlausible(n)) {
+            throw new IllegalArgumentException("Invalid languageCode. Use e.g. de, de-DE, zh-Hant-TW");
+        }
+        return n;
+    }
+
     private void ensureNotDefaultOrFallback(ProjectScopeEntity scope, String code, String action) {
-        if (code.equals(scope.getDefaultLanguageCode())) {
+        String def = LanguageCodeNormalizer.normalize(scope.getDefaultLanguageCode());
+        String fb = LanguageCodeNormalizer.normalize(scope.getFallbackLanguageCode());
+
+        if (def != null && code.equals(def)) {
             throw new ConflictException("Cannot " + action + " default language: " + code);
         }
-        if (!isBlank(scope.getFallbackLanguageCode()) && code.equals(scope.getFallbackLanguageCode())) {
+        if (fb != null && code.equals(fb)) {
             throw new ConflictException("Cannot " + action + " fallback language: " + code);
         }
     }
 
-    /**
-     * P0-4: Kanonische Normalisierung
-     * - de-de -> de-DE
-     * - zh-hant-tw -> zh-Hant-TW
-     *
-     * (kein vollständiger BCP-47 Validator, aber robust genug für P0)
-     */
-    private String normalizeLanguageCode(String code) {
-        if (code == null || code.trim().isEmpty()) {
-            throw new IllegalArgumentException("languageCode is required");
+    private void auditSafe(String projectKey,
+                           String actor,
+                           String action,
+                           String entityType,
+                           String entityKey,
+                           Object details,
+                           String requestId) {
+        try {
+            audit.log(projectKey, actor, action, entityType, entityKey, details, requestId);
+        } catch (Exception ignored) {
+            // Audit darf fachliche Operationen nicht kaputt machen
         }
-        String[] parts = code.trim().split("-");
-        for (int i = 0; i < parts.length; i++) {
-            String p = parts[i];
-            if (p.isEmpty()) continue;
-
-            if (i == 0) {
-                parts[i] = p.toLowerCase(); // language
-            } else if (p.length() == 4) {
-                // script: Title Case (Hant)
-                parts[i] = p.substring(0, 1).toUpperCase() + p.substring(1).toLowerCase();
-            } else if (p.length() == 2 || p.length() == 3) {
-                // region (DE, TW) oder numeric (419)
-                parts[i] = p.toUpperCase();
-            } else {
-                // variants etc.: wie geliefert (oder lower, wenn du willst)
-                parts[i] = p;
-            }
-        }
-        return String.join("-", parts);
     }
 
-    private boolean isBlank(String s) {
-        return s == null || s.trim().isEmpty();
+    private boolean deleteBundleIfExists(String projectKey, String languageCode, Long languageId, String actor) {
+        var currentOpt = bundleRepo.findByLanguageId(languageId);
+        List<LanguageBundleVersionEntity> versions = bundleVersionRepo.findByLanguageIdOrderByBundleVersionDesc(languageId);
+
+        if (currentOpt.isEmpty() && versions.isEmpty()) {
+            return false;
+        }
+
+        // alle eindeutigen Paths sammeln
+        java.util.Set<String> paths = new java.util.LinkedHashSet<>();
+        currentOpt.ifPresent(b -> {
+            if (b.getStoragePath() != null && !b.getStoragePath().isBlank()) paths.add(b.getStoragePath());
+        });
+        for (LanguageBundleVersionEntity v : versions) {
+            if (v.getStoragePath() != null && !v.getStoragePath().isBlank()) paths.add(v.getStoragePath());
+        }
+
+        // DB weg
+        currentOpt.ifPresent(bundleRepo::delete);
+        if (!versions.isEmpty()) {
+            bundleVersionRepo.deleteAll(versions);
+        }
+
+        // Files weg
+        for (String p : paths) {
+            deleteFileIfExists(p);
+        }
+
+        // Cache sicherheitshalber invalidieren
+        bundleCache.invalidate(projectKey, languageCode);
+
+        auditSafe(projectKey, actor,
+                "BUNDLE_PURGE_WITH_LANGUAGE",
+                "BUNDLE",
+                languageCode,
+                Map.of(
+                        "versionsDeleted", versions.size(),
+                        "files", paths.size()
+                ),
+                null);
+
+        return true;
     }
 
-    private LanguageResponse toResponse(LanguageEntity e) {
-        return new LanguageResponse(
-                e.getId(),
-                e.getProjectKey(),
-                e.getLanguageCode(),
-                e.getName(),
-                e.isActive(),
-                e.isDeleted(),
-                e.getVersion()
-        );
+    private void deleteFileIfExists(String path) {
+        if (path == null || path.isBlank()) return;
+        try {
+            Files.deleteIfExists(Paths.get(path));
+        } catch (Exception ignored) {
+        }
     }
 }
 
